--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,3 +16,16 @@ footer {
 main > .container {
     padding: 60px 15px 0;
 }
+
+.right-sidebar {
+    float: left;
+    width: 250px;
+    margin-left: -250px;
+    position: relative;
+    background: #FFACAA;
+}
+.middle {
+    width: 100%;
+    padding: 0 0 100px;
+    position: relative;
+}
